--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>JS</title>
 	<link rel="stylesheet" href="style.css">
-	<script src="index.js" defer></script>
+
 </head>
 <body>	
-
-
 	
+	<div class="wrapper">
+		<input type="button" value="Создать таблицу" onclick="gogo()">
+		<input type="number" placeholder="Число строк" value="">
+		<input type="number" placeholder="Число столбцов" value="">
+		<input type="button" value="Раскрасить  таблицу" onclick="_randTD()">		
+	</div>
+<table></table>
+<div id="count"></div>
+	<script src="index.js"></script>
 </body>
 </html>
